opam-version: "2.0"
name: "paf"
synopsis: "A CoHTTP client with its HTTP/AF implementation"
description: "A compatible layer betweem CoHTTP and HTTP/AF."
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/paf-le-chien"
doc: "https://dinosaure.github.io/paf-le-chien/"
bug-reports: "https://github.com/dinosaure/paf-le-chien/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "paf" {= version}
  "cohttp-lwt" {< "6.0.0~"}
  "domain-name"
  "httpaf"
  "ipaddr"
  "alcotest-lwt"      {with-test & >= "1.1.0"}
  "fmt"               {with-test}
  "logs"              {with-test}
  "mirage-crypto-rng" {with-test & >= "0.11.0"}
  "tcpip"             {with-test & >= "6.0.0"}
  "uri"               {with-test}
  "lwt"               {with-test}
  "astring"           {with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs] {os != "macos"}
dev-repo: "git+https://github.com/dinosaure/paf-le-chien.git"
