opam-version: "2.0"
name: "paf"
synopsis: "A CoHTTP client with its HTTP/AF implementation"
description: "A compatible layer betweem CoHTTP and HTTP/AF."
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/paf-le-chien"
doc: "https://dinosaure.github.io/paf-le-chien/"
bug-reports: "https://github.com/dinosaure/paf-le-chien/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "paf" {= version}
  "duration"
  "emile" {>= "1.1"}
  "httpaf"
  "letsencrypt" {>= "0.4.0"}
  "mirage-stack"
  "mirage-time"
  "tls-mirage"
  "x509" {>= "0.13.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/paf-le-chien.git"

pin-depends: [
  [ "httpaf.dev" "git+https://github.com/aantron/httpaf.git#3a74fd8851e3019f5889ae1bf9350e90ed40017d" ]
]
