opam-version: "2.0"
name: "paf"
synopsis: "HTTP/AF and MirageOS"
description: "A compatible layer for HTTP/AF and MirageOS."
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/paf-le-chien"
doc: "https://dinosaure.github.io/paf-le-chien/"
bug-reports: "https://github.com/dinosaure/paf-le-chien/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "mirage-stack" {>= "3.0.0"}
  "mirage-time"
  "tls-mirage" {>= "0.15.0"}
  "mimic"
  "ke" {>= "0.4"}
  "lwt" {with-test}
  "base-unix" {with-test}
  "logs" {with-test}
  "fmt" {with-test}
  "mirage-crypto-rng" {with-test}
  "tcpip" {with-test}
  "mirage-time-unix" {with-test}
  "ptime" {with-test}
  "uri" {with-test}
  "alcotest-lwt" {with-test}
  "bigstringaf" {>= "0.7.0"}
  "httpaf" {>= "0.7.1"}
  "h2" {>= "0.7.0"}
  "faraday" {>= "0.7.2"}
  "tls" {>= "0.15.0"}
  "cstruct" {>= "6.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/paf-le-chien.git"

pin-depends: [
  [ "httpaf.dev" "git+https://github.com/aantron/httpaf.git#3a74fd8851e3019f5889ae1bf9350e90ed40017d" ]
  [ "h2.dev" "git+https://github.com/aantron/ocaml-h2.git#fa0c8a4746fdc50183e254f8c08239fc5b67717d" ]
]
