opam-version: "2.0"
name: "paf"
synopsis: "HTTP/AF and MirageOS"
description: "A compatible layer for HTTP/AF and MirageOS."
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/paf-le-chien"
doc: "https://dinosaure.github.io/paf-le-chien/"
bug-reports: "https://github.com/dinosaure/paf-le-chien/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "tcpip" {>= "7.0.0"}
  "mirage-time" {>= "2.0.0"}
  "tls-mirage" {>= "0.15.0"}
  "mimic" {>= "0.0.5"}
  "ke" {>= "0.4"}
  "lwt" {with-test}
  "base-unix" {with-test}
  "logs" {with-test}
  "fmt" {with-test}
  "mirage-crypto-rng" {with-test}
  "mirage-time-unix" {with-test}
  "ptime" {with-test}
  "uri" {with-test}
  "alcotest-lwt" {with-test}
  "bigstringaf" {>= "0.7.0"}
  "httpaf" {>= "0.7.1"}
  "h2" {>= "0.9.0"}
  "faraday" {>= "0.7.2"}
  "tls" {>= "0.15.0"}
  "cstruct" {>= "6.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/paf-le-chien.git"
