opam-version: "2.0"
name: "paf"
synopsis: "HTTP/AF and MirageOS"
description: "A compatible layer for HTTP/AF and MirageOS."
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/paf-le-chien"
doc: "https://dinosaure.github.io/paf-le-chien/"
bug-reports: "https://github.com/dinosaure/paf-le-chien/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "tcpip" {>= "8.0.1"}
  "tls-mirage" {>= "0.17.4"}
  "mimic" {>= "0.0.7"}
  "ke" {>= "0.4"}
  "lwt" {with-test}
  "base-unix" {with-test}
  "logs" {with-test}
  "fmt" {with-test}
  "mirage-crypto-rng" {with-test & >= "1.2.0"}
  "ptime" {with-test}
  "uri" {with-test}
  "alcotest-lwt" {with-test}
  "x509" {with-test & > "1.0.0"}
  "bigstringaf" {>= "0.7.0"}
  "httpaf" {>= "0.7.1"}
  "h2" {>= "0.10.0"}
  "faraday" {>= "0.7.2"}
  "tls" {>= "1.0.0"}
  "cstruct" {>= "6.0.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs] {os != "macos"}
dev-repo: "git+https://github.com/dinosaure/paf-le-chien.git"
