(library
 (name paf)
 (public_name paf)
 (modules paf)
 (libraries faraday bigstringaf ke mimic))

(library
 (name alpn)
 (public_name paf.alpn)
 (modules alpn)
 (libraries paf httpaf h2))

(library
 (name paf_mirage)
 (public_name paf.mirage)
 (modules paf_mirage)
 (libraries tcpip paf tls-mirage paf.alpn))

(library
 (name paf_cohttp)
 (public_name paf-cohttp)
 (modules paf_cohttp)
 (libraries ipaddr domain-name paf httpaf cohttp-lwt))

(library
 (name le)
 (wrapped false)
 (public_name paf-le)
 (modules lE)
 (libraries httpaf tcpip paf mirage-time duration tls-mirage emile
   letsencrypt))
