(library
 (name paf)
 (public_name paf)
 (modules paf)
 (libraries faraday bigstringaf ke mimic))

(library
 (name pafe)
 (public_name paf.e)
 (modules pafe)
 (libraries miou faraday bigstringaf ke mimic.e))

(library
 (name alpn)
 (public_name paf.alpn)
 (modules alpn)
 (libraries paf h1 h2))

(library
 (name paf_mirage)
 (public_name paf.mirage)
 (modules paf_mirage)
 (libraries tcpip paf tls-mirage paf.alpn))

(library
 (name paf_cohttp)
 (public_name paf-cohttp)
 (modules paf_cohttp)
 (libraries ipaddr domain-name paf h1 cohttp-lwt))
