(library
 (name fiber)
 (modules fiber)
 (libraries fmt lwt.unix unix))

(executable
 (name simple_server)
 (modules simple_server)
 (libraries logs.fmt fmt.tty mirage-crypto-rng.unix mirage-time-unix
   tcpip.stack-socket paf))

(library
 (name simple_client)
 (modules simple_client)
 (libraries ptime.clock.os logs.fmt fmt.tty uri mirage-crypto-rng.unix
   mirage-time-unix tcpip.stack-socket paf))

(executable
 (name clients)
 (modules clients)
 (foreign_stubs
  (language c)
  (names mclock))
 (libraries fiber simple_client))

(executable
 (name test)
 (modules test)
 (libraries uri unix))

(executable
 (name test_cohttp)
 (modules test_cohttp)
 (libraries fmt.tty logs.fmt alcotest-lwt mirage-time-unix tcpip.stack-socket
   cohttp-lwt paf.cohttp mirage-crypto-rng.unix))

(rule
 (alias runtest)
 (deps server.pem server.key file.txt %{exe:clients.exe}
   %{exe:simple_server.exe})
 (action
  (run ./test.exe -c 50 -n 200)))

(rule
 (alias runtest)
 (deps server.pem server.key %{exe:test_cohttp.exe})
 (action
  (run ./test_cohttp.exe --color=always)))
